question:-on BS,BST,sliding window